implemented crossfade animation to notification popups

--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -26,6 +26,7 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = bordercolor rgba(fb4934ee) rgba(fabd2fee) 45deg, fullscreen:1
 
+
 layerrule = ignorealpha 0.5, mpris
 layerrule = blur, mpris
 
@@ -34,3 +35,10 @@ layerrule = blur, applauncher
 
 layerrule = ignorealpha 0.5, speakerosd
 layerrule = blur, speakerosd
+
+layerrule = ignorealpha 0.5, notifications
+layerrule = blur, notifications
+
+# animation = layers, 1, 4, default, slide
+# layerrule = animation fade, applauncher
+layerrule = noanim, notifications
