--- a/.config/hypr/clients.conf
+++ b/.config/hypr/clients.conf
@@ -36,7 +36,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
+    enabled = true
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
