cleaning up symlinks created by improper use of stow

--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -9,6 +9,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, M, fullscreen, 1
+# bind = $mainMod, M, exec, ~/.config/hypr/maximize.sh
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod CTRL, 1, togglespecialworkspace, terminal
