batch: batch commit because I forgot to constantly push

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,7 +1,8 @@
 # Execute your favorite apps at launch
+exec-once = play -v 0.5 ~/.config/hypr/desktop-login.oga
 exec-once = ags & hyprpaper & gammastep-indicator & nm-applet
-exec-once = steam -silent &
+# exec-once = steam -silent &
 exec-once = [workspace special:terminal silent] kitty
-exec-once = [workspace special:btop silent] kitty -e btop
+# exec-once = [workspace special:btop silent] kitty -e btop
 exec-once = [workspace special:spotify silent] flatpak run com.spotify.Client
 exec-once = ~/.config/hypr/autostart.sh
