--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -9,6 +9,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating, 
 bind = $mainMod, M, fullscreen, 1
+bind = $mainMod, B, exec, flatpak run io.github.zen_browser.zen
 # bind = $mainMod, M, exec, ~/.config/hypr/maximize.sh
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, J, togglesplit, # dwindle
@@ -20,6 +21,7 @@ bind = $mainMod CTRL, 5, togglespecialworkspace, discord
 bind = $mainMod CTRL, 6, togglespecialworkspace, screenrecord
 
 bind = $mainMod, RETURN, exec, $terminal 
+bind = $mainMod SHIFT, RETURN, exec, $terminal -e tmux 
 
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
