--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1
+monitor=,1920x1200@165,auto,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -40,5 +40,9 @@ misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     vfr = true
+    mouse_move_enables_dpms = false
 }
 
+opengl {
+    force_introspection = 1
+}
