--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -10,35 +10,27 @@ windowrule = workspace special:todoist silent, Todoist
 windowrule = workspace special:screenrecord silent, com.obsproject.Studio
 
 windowrulev2 = opacity 0.90 0.90, class:^(kitty)$
-windowrulev2 = opacity 0.90, class:^(WebCord|Spotify|Todoist)$
+windowrulev2 = opacity 0.90, class:^(WebCord|Spotify|Todoist|obsidian)$
 windowrulev2 = fullscreen, class:^(WebCord|Todoist|mpv)$
 windowrulev2 = fullscreen, title:^(Spotify Premium|Spotify)$
 windowrulev2 = float, title:^(Steam Settings)$
-windowrulev2 = bordercolor rgba(928374AA),floating:1
+# windowrulev2 = bordercolor rgba(928374AA),floating:1
 
 windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = size 800 600,class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = bordercolor rgba(92837488),class:^(xdg-desktop-portal-gtk)$
+windowrulev2 = stayfocused, class:^(xdg-desktop-portal-gtk)$
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = bordercolor rgba(fb4934ee) rgba(fabd2fee) 45deg, fullscreen:1
 
 
-layerrule = ignorealpha 0.5, mpris
-layerrule = blur, mpris
-
-layerrule = ignorealpha 0.5, applauncher
-layerrule = blur, applauncher
-
-layerrule = ignorealpha 0.5, speakerosd
-layerrule = blur, speakerosd
-
-layerrule = ignorealpha 0.5, notifications
-layerrule = blur, notifications
-
-# animation = layers, 1, 4, default, slide
-# layerrule = animation fade, applauncher
-layerrule = noanim, notifications
+layerrule = ignorealpha 0.5, ^(mpris|applauncher|speakerosd|notifications|control_center)$
+layerrule = blur, ^(mpris|applauncher|speakerosd|notifications|control_center)$
+layerrule = noanim, ^(notifications)$
