--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,3 +14,9 @@ confirm_os_window_close	0
 hide_window_decorations	True
 
 background_opacity	0.9625
+
+
+# BEGIN_KITTY_THEME
+# Gruvbox Dark
+include current-theme.conf
+# END_KITTY_THEME
