--- a/.config/hypr/clients.conf
+++ b/.config/hypr/clients.conf
@@ -4,8 +4,8 @@ general {
     gaps_in = 3
     gaps_out = 12
     border_size = 3
-    col.active_border = rgba(babb26ee) rgba(fabd2fee) 45deg
-    col.inactive_border = rgb(928374)
+    col.active_border = rgba(babb26ee) rgba(504945ee) rgba(fabd2fee) 90deg
+    col.inactive_border = rgb(504945)
 
     layout = dwindle
 
@@ -25,6 +25,7 @@ decoration {
 
         popups = true
         popups_ignorealpha = 0.2
+        new_optimizations = true
     }
 
     drop_shadow = false
@@ -42,10 +43,11 @@ animations {
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier, popin 95%
+    animation = windows, 1, 7, default, popin 95%
     animation = windowsOut, 1, 7, default, popin 95%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = workspaces, 1, 4, default
+
 }
