fix: changed and improved reload bind to allow reloading even if program is not active

--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -37,7 +37,7 @@ bind = $mainMod, 0, workspace, 10
 #   [SUPER + MOD BINDS] e.g. $mainMod SHIFT, $mainMod PRINT, & etc.
 bind = $mainMod SHIFT, Q, exit, 
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-bind = $mainMod SHIFT, r, exec, pkill ags && ags
+bind = $mainMod SHIFT, r, exec, ags -q && ags
 bind = $mainMod SHIFT, d, exec, pkill ags && ags --inspector
 
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
