--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,5 +1,8 @@
 preload=/home/gerardvega/.local/wallpapers/gruvbox_SnowyMountains.jpg
 preload=/home/gerardvega/.local/wallpapers/GhibliStarWars.png
+# preload=/home/gerardvega/.local/wallpapers/coffee_cherries.jpg
+# preload=/home/gerardvega/.local/wallpapers/berries.png
+preload=/home/gerardvega/.local/wallpapers/fog_forest_2.png
 
-wallpaper=,/home/gerardvega/.local/wallpapers/gruvbox_SnowyMountains.jpg
+wallpaper=,/home/gerardvega/.local/wallpapers/fog_forest_2.png
 
