--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -33,4 +33,4 @@ windowrulev2 = bordercolor rgba(fb4934ee) rgba(fabd2fee) 45deg, fullscreen:1
 
 layerrule = ignorealpha 0.5, ^(mpris|applauncher|speakerosd|notifications|control_center)$
 layerrule = blur, ^(mpris|applauncher|speakerosd|notifications|control_center)$
-layerrule = noanim, ^(notifications)$
+layerrule = noanim, ^(notifications|clock-widget|playing-widget)$
