change: changed something, I don't remember

--- a/.config/hypr/clients.conf
+++ b/.config/hypr/clients.conf
@@ -4,8 +4,8 @@ general {
     gaps_in = 3
     gaps_out = 12
     border_size = 3
-    col.active_border = rgba(babb26ee) rgba(504945ee) rgba(fabd2fee) 90deg
-    col.inactive_border = rgb(504945)
+    col.active_border = rgba(72A8A1EE) rgba(96AD73EE) 45deg
+    col.inactive_border = rgb(495156)
 
     layout = dwindle
 
