--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -17,6 +17,6 @@ background_opacity	0.9625
 
 
 # BEGIN_KITTY_THEME
-# Gruvbox Dark
+# Everforest Dark Hard
 include current-theme.conf
 # END_KITTY_THEME
