fix: fixing config for dual monitor setup

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,6 +1,6 @@
 # Execute your favorite apps at launch
 exec-once = play -v 0.5 ~/.config/hypr/desktop-login.oga
-exec-once = ags & hyprpaper & gammastep-indicator & nm-applet
+exec-once = ags & hyprpaper & gammastep-indicator & nm-applet & 
 # exec-once = steam -silent &
 exec-once = [workspace special:terminal silent] kitty
 # exec-once = [workspace special:btop silent] kitty -e btop
