--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -20,8 +20,8 @@ bind = $mainMod CTRL, 4, togglespecialworkspace, todoist
 bind = $mainMod CTRL, 5, togglespecialworkspace, discord
 bind = $mainMod CTRL, 6, togglespecialworkspace, screenrecord
 
-bind = $mainMod, RETURN, exec, $terminal 
-bind = $mainMod SHIFT, RETURN, exec, $terminal -e tmux 
+bind = $mainMod, RETURN, exec, $terminal -e tmux 
+bind = $mainMod SHIFT, RETURN, exec, $terminal 
 
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
