--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,1920x1200@165,auto,1
+monitor=,1920x1200@165,0x1080,1
+monitor=HDMI-A-1,1920x1080@60,0x0,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
