--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -2,12 +2,16 @@ animation = specialWorkspace, 1, 6, default, slidefadevert -50%
 
 blurls=agsbar 
 
-workspace=s[true], gapsout:0, border:false, 
+workspace=s[true], gapsout:0, border:false
+workspace=1, monitor:eDP-2 
+workspace=2, monitor:eDP-2 
+workspace=3, monitor:eDP-2 
+workspace=4, monitor:eDP-2 
 
 windowrule = workspace special:discord silent, WebCord
 windowrule = workspace special:spotify silent, Spotify
 windowrule = workspace special:todoist silent, Todoist
-windowrule = workspace special:screenrecord silent, com.obsproject.Studio
+# windowrule = workspace special:screenrecord silent, com.obsproject.Studio
 
 windowrulev2 = opacity 0.90 0.90, class:^(kitty)$
 windowrulev2 = opacity 0.90, class:^(WebCord|Spotify|Todoist|obsidian)$
