fix: added fixes for desktop use

--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -37,4 +37,4 @@ windowrulev2 = bordercolor rgba(fb4934ee) rgba(fabd2fee) 45deg, fullscreen:1
 
 layerrule = ignorealpha 0.5, ^(mpris|applauncher|speakerosd|notifications|control_center)$
 layerrule = blur, ^(mpris|applauncher|speakerosd|notifications|control_center)$
-layerrule = noanim, ^(notifications|clock-widget|playing-widget)$
+layerrule = noanim, ^(notifications|clock-widget-0|clock-widget-1|playing-widget)$
