updates to zsh nvim and hyyprland configs

--- a/.config/hypr/binds.conf
+++ b/.config/hypr/binds.conf
@@ -11,6 +11,7 @@ bind = $mainMod, F, togglefloating,
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, B, exec, flatpak run io.github.zen_browser.zen
 # bind = $mainMod, M, exec, ~/.config/hypr/maximize.sh
+bind = $mainMod CTRL, escape, exec, ~/.config/hypr/close_special_workspace.sh
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod CTRL, 1, togglespecialworkspace, terminal
