--- a/.config/hypr/clients.conf
+++ b/.config/hypr/clients.conf
@@ -1,8 +1,10 @@
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 3
-    gaps_out = 12
+    # gaps_in = 3
+    # gaps_out = 12
+    gaps_in = 2
+    gaps_out = 4
     border_size = 3
     col.active_border = rgba(72A8A1EE) rgba(96AD73EE) 45deg
     col.inactive_border = rgb(495156)
@@ -16,7 +18,7 @@ general {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 4
+    rounding = 0
     
     blur {
         enabled = true
@@ -32,12 +34,12 @@ decoration {
     shadow_range = 16
     shadow_render_power = 2
     col.shadow = rgba(1a1a1a22)
-    dim_inactive = true
+    dim_inactive = false
     dim_strength = 0.1
 }
 
 animations {
-    enabled = true
+    enabled = false
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
