--- a/.config/hypr/rules.conf
+++ b/.config/hypr/rules.conf
@@ -3,10 +3,10 @@ animation = specialWorkspace, 1, 6, default, slidefadevert -50%
 blurls=agsbar 
 
 workspace=s[true], gapsout:0, border:false
-workspace=1, monitor:eDP-2 
-workspace=2, monitor:eDP-2 
-workspace=3, monitor:eDP-2 
-workspace=4, monitor:eDP-2 
+workspace=5, monitor:HDMI-A-1 
+workspace=6, monitor:HDMI-A-1
+workspace=7, monitor:HDMI-A-1
+workspace=8, monitor:HDMI-A-1
 
 windowrule = workspace special:discord silent, WebCord
 windowrule = workspace special:spotify silent, Spotify
