--- a/.config/hypr/clients.conf
+++ b/.config/hypr/clients.conf
@@ -30,10 +30,12 @@ decoration {
         new_optimizations = true
     }
 
-    drop_shadow = false
-    shadow_range = 16
-    shadow_render_power = 2
-    col.shadow = rgba(1a1a1a22)
+    shadow {
+        enabled = true
+        range = 16
+        render_power = 2
+        color = rgba(1a1a1a22)
+    }
     dim_inactive = false
     dim_strength = 0.1
 }
