--- a/.config/ohmyposh/zen.toml
+++ b/.config/ohmyposh/zen.toml
@@ -1,87 +1,91 @@
-#:schema https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
-
-version = 2
-final_space = true
 console_title_template = '{{ .Shell }} in {{ .Folder }}'
+version = 3
+final_space = true
 
-[[blocks]]
-  type = 'prompt'
-  alignment = 'left'
-  newline = true
-
-[[blocks.segments]]
-  type = 'text'
-  style = 'plain'
-  background = 'green'
-  foreground = 'black'
-  template = '<b> {{ if .Env.TMUX }}TMUX{{ else }}TERM{{ end }} </>'
-
-[[blocks.segments]]
-  type = 'path'
-  style = 'plain'
-  background = 'transparent'
-  foreground = 'yellow'
-  template = '<b> {{ .Path }}</> '
-[blocks.segments.properties]
-  style = 'unique'
-
-[[blocks.segments]]
-  type = 'git'
-  style = 'plain'
-  background = 'transparent'
-  template = '{{ .HEAD }}: <green>{{ if or (.Working.Changed) (.Staging.Changed)}}󰦓{{ end }}</> <blue>{{ if gt .Behind 0 }}󰧖{{ end }}{{ if gt .Ahead 0 }}󰧜{{ end }}</>'
-[blocks.segments.properties]
-  branch_icon = ' '
-  commit_icon = '@'
-  fetch_status = true
-
-[[blocks]]
-  type = 'prompt'
-  alignment='right'
-  overflow = 'hidden'
-
-[[blocks.segments]]
-  type = 'executiontime'
-  style = 'plain'
-  foreground = 'cyan'
-  background = 'transparent'
-  template = '{{ div .Ms 1000 }}s'
-
-[[blocks.segments]]
-  type = 'time'
-  style = 'plain'
-  foreground = 'white'
-  background = 'transparent'
-[blocks.segments.properties]
-  time_format = "󰥔 15:04:05"
-
-
-
-[[blocks]]
-  type = 'prompt'
-  alignment = 'left'
-  newline = true
-
-[[blocks.segments]]
-  type = 'text'
-  style = 'plain'
-  # foreground = 'magenta'
-  foreground_templates = [
-    "{{if gt .Code 0}}red{{end}}",
-    "{{if eq .Code 0}}magenta{{end}}"
-  ]
-  background = 'transparent'
-  template = "$"
-
-[transient_prompt]
-  foreground_templates = [
-    "{{if gt .Code 0}}red{{end}}",
-    "{{if eq .Code 0}}magenta{{end}}"
-  ]
-  background = 'transparent'
-  template = "$ "
-
-[secondary_prompt] 
+[secondary_prompt]
+  template = ' '
   foreground = 'magenta'
   background = 'transparent'
-  template = " "
+
+[transient_prompt]
+  template = '$ '
+  background = 'transparent'
+  foreground_templates = ['{{if gt .Code 0}}red{{end}}', '{{if eq .Code 0}}magenta{{end}}']
+
+[[blocks]]
+  type = 'prompt'
+  alignment = 'left'
+  newline = true
+
+  [[blocks.segments]]
+    template = '<b> {{ if .Env.TMUX }}TMUX{{ else }}TERM{{ end }} </>'
+    foreground = 'black'
+    background = 'green'
+    type = 'text'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+
+  [[blocks.segments]]
+    template = '<b> {{ .Path }}</> '
+    foreground = 'yellow'
+    background = 'transparent'
+    type = 'path'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+      style = 'unique'
+
+  [[blocks.segments]]
+    template = '{{ .HEAD }}: <green>{{ if or (.Working.Changed) (.Staging.Changed)}}󰦓{{ end }}</> <blue>{{ if gt .Behind 0 }}󰧖{{ end }}{{ if gt .Ahead 0 }}󰧜{{ end }}</>'
+    background = 'transparent'
+    type = 'git'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      branch_icon = ' '
+      cache_duration = 'none'
+      commit_icon = '@'
+      fetch_status = true
+
+[[blocks]]
+  type = 'prompt'
+  alignment = 'right'
+  overflow = 'hidden'
+
+  [[blocks.segments]]
+    template = '{{ div .Ms 1000 }}s'
+    foreground = 'cyan'
+    background = 'transparent'
+    type = 'executiontime'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+
+  [[blocks.segments]]
+    foreground = 'white'
+    background = 'transparent'
+    type = 'time'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+      time_format = '󰥔 15:04:05'
+
+[[blocks]]
+  type = 'prompt'
+  alignment = 'left'
+  newline = true
+
+  [[blocks.segments]]
+    template = '$'
+    background = 'transparent'
+    type = 'text'
+    style = 'plain'
+    foreground_templates = ['{{if gt .Code 0}}red{{end}}', '{{if eq .Code 0}}magenta{{end}}']
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
