--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -22,9 +22,9 @@ set -g @plugin 'alexwforsythe/tmux-which-key'
 
 # Tmux settings
 set -g mouse on
-
 set -g set-clipboard on
-
+set -sg escape-time 0 
+set -g status-interval 0    
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
